tests/try/try.exp
Error: init.js:34
 34:     var y:number = x; // error
                        ^ possibly uninitialized variable. This type is incompatible with
 34:     var y:number = x; // error
               ^^^^^^ number

Error: init.js:44
 44:     var y:number = x; // error
                        ^ possibly uninitialized variable. This type is incompatible with
 44:     var y:number = x; // error
               ^^^^^^ number

Error: init.js:54
 54:     var y:number = x; // error
                        ^ possibly uninitialized variable. This type is incompatible with
 54:     var y:number = x; // error
               ^^^^^^ number

Error: init.js:66
 66:     var y:number = x; // error
                        ^ possibly uninitialized variable. This type is incompatible with
 66:     var y:number = x; // error
               ^^^^^^ number

Error: init.js:118
118:   var y:number = x; // error
                      ^ uninitialized variable. This type is incompatible with
118:   var y:number = x; // error
             ^^^^^^ number

Error: init.js:131
131:   var y:number = x; // error
                      ^ possibly uninitialized variable. This type is incompatible with
131:   var y:number = x; // error
             ^^^^^^ number

Error: init.js:140
140:   var y:number = x; // error
                      ^ possibly uninitialized variable. This type is incompatible with
140:   var y:number = x; // error
             ^^^^^^ number

Error: init.js:153
153:   var y:number = x; // error
                      ^ possibly uninitialized variable. This type is incompatible with
153:   var y:number = x; // error
             ^^^^^^ number

Error: return.js:28
 28:   return "bar"; // unreachable
       ^^^^^^^^^^^^^ unreachable code

Error: return.js:64
 64:   bar(); // unreachable
       ^^^^^^ unreachable code

Error: test.js:18
 18:     x(); // string ~/> function call (no num or bool error)
         ^^^ call of string. Function cannot be called on
 18:     x(); // string ~/> function call (no num or bool error)
         ^ string

Error: test.js:19
 19:     y(); // object ~/> function call (no uninitialized error)
         ^^^ call of object literal. Callable signature not found in
 19:     y(); // object ~/> function call (no uninitialized error)
         ^ object literal

Error: test.js:41
 41:     x(); // unreachable
         ^^^^ unreachable code


Found 13 errors
